# phoenix-channels-python-client-alpha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-please-config.json  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-title.yml
examples/: minimal_phx_events_client.py
phoenix_channels_python_client/: __init__.py  api.py  client.py  exceptions.py  minimal_phx_events_client.py  phx_messages.py  protocol_handler.py  topic_subscription.py  utils.py
tests/: conftest.py  pytest.ini  test_client.py
tests/test_v1_protocol/: conftest.py  test_client_v1.py
tests/test_v2_protocol/: conftest.py  test_client_v2.py
